# ZQ-LEAPXO-SKILL-ENGINE

./: .env.example  .gitignore  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.continue/checks/: accessibility-fix-agent.md
.github/workflows/: ci.yml  release.yml
TestSuite_Results/: ALGA_TestResults.md  DRM_QAQC_TestResults.md  Fix_Report.md  MrQ_TestResults.md  QAQC_Summary.md
backend/: .env.example  __init__.py  db.py  main.py  package.json  vault.py
backend/src/: orchestrator.js  server.js
backend/src/ipc/: redis.js
backend/src/security/: firewall.js
backend/src/skills/: executor.js  schema.js  selector.js
codeql-custom-queries-python/: codeql-pack.yml  example.ql  qlpack.lock.yml
database/: schema.sql  seed.sql
frontend/: Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
helm/: Chart.yaml  values.yaml
helm/leapxo-skill-engine/: Chart.yaml  values.yaml
k8s/: namespace.yaml  secrets.yaml
scripts/: build-android.sh  build-linux.sh  build-windows.ps1  test-all.sh
skills/examples/: chest-pain-triage-om.json  general-qa.json
src/cache/: semantic_cache.py
src/core/: exceptions.py  skill_schema.py  token_predictor.py
src/execution/: circuit_breaker.py  l1_discovery.py  l2_instruction.py  l3_executor.py
src/governance/: audit_logger.py
src/orchestration/: engine.py
src/registry/: skill_registry.py
src/repair/: auto_repair.py
src/security/: ecdsa_signer.py  policy_engine.py  prompt_firewall.py
tests/: test_audit_logger.py  test_backend_v9.py  test_circuit_breaker.py  test_ecdsa_signer.py  test_orchestration.py  test_policy_engine.py  test_prompt_firewall.py  test_semantic_cache.py  test_skill_schema.py  test_token_predictor.py
(+18 files in other folders)
