[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "leapxo-skill-engine"
version = "2.1.0"
description = "LEAPXO Skill Engine v2.1 — Hardened + Enhanced production-grade AI skill orchestration"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "cryptography>=42.0.0",
    "tiktoken>=0.6.0",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
